// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`processLinterResult should return diagnostics for each warning 1`] = `
{
  "diagnostics": [
    {
      "code": "unit-no-unknown",
      "message": "unit-no-unknown",
      "range": {
        "end": {
          "character": 1,
          "line": 0,
        },
        "start": {
          "character": 0,
          "line": 0,
        },
      },
      "severity": 1,
      "source": "Stylelint",
    },
    {
      "code": "at-rule-no-unknown",
      "message": "at-rule-no-unknown",
      "range": {
        "end": {
          "character": 1,
          "line": 0,
        },
        "start": {
          "character": 0,
          "line": 0,
        },
      },
      "severity": 1,
      "source": "Stylelint",
    },
    {
      "code": "alpha-value-notation",
      "message": "alpha-value-notation",
      "range": {
        "end": {
          "character": 1,
          "line": 0,
        },
        "start": {
          "character": 0,
          "line": 0,
        },
      },
      "severity": 1,
      "source": "Stylelint",
    },
  ],
  "getWarning": [Function],
}
`;

exports[`processLinterResult should return output if given 1`] = `
{
  "diagnostics": [
    {
      "code": "unit-no-unknown",
      "message": "unit-no-unknown",
      "range": {
        "end": {
          "character": 1,
          "line": 0,
        },
        "start": {
          "character": 0,
          "line": 0,
        },
      },
      "severity": 1,
      "source": "Stylelint",
    },
  ],
  "getWarning": [Function],
  "output": "Output",
}
`;

exports[`processLinterResult should throw if invalid option results are given 1`] = `
"Warning 1
Warning 2"
`;
